# gen-ai-assistant

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_llm_rag.ipynb  02_llm_mlflow.ipynb
src/: main.py  test_deepeval.py
