[tool.poetry]
name = "gen-ai-assistant"
version = "0.1.0"
description = ""
authors = ["goodshawn12 <goodshawn12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.41.0"
python-dotenv = "^1.0.1"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
pypdf = "^4.3.1"
yt-dlp = "^2024.8.6"
beautifulsoup4 = "^4.12.3"
langchain-openai = "^0.1.22"
chromadb = "^0.5.5"
tiktoken = "^0.7.0"
lark = "^1.2.2"
panel = "^1.4.5"
docarray = "^0.40.0"
jupyter-bokeh = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
